10/ex1/job_ex1.log
rm -f baseline auto_vectorized
rm -f report/raw/baseline_vec_report.txt report/raw/auto_vec_report.txt
mkdir -p report/raw
gcc -std=c11 -Wall -Wextra -Wpedantic -O1 -fno-tree-vectorize -DVARIANT_NAME=\"baseline\" vector_add.c -o baseline  -lm
gcc -std=c11 -Wall -Wextra -Wpedantic -O1 -ftree-vectorize -DVARIANT_NAME=\"auto_vectorized\" vector_add.c -o auto_vectorized  -lm
rm -f /tmp/vector_add_report_probe /tmp/vector_add_baseline_report /tmp/vector_add_auto_report
./baseline 16 8
variant=baseline size=16 repetitions=8 elapsed_seconds=0.000000260 checksum=32.000000000 expected_checksum=32.000000000 sample0=2.000000000 samplemid=2.000000000 samplelast=2.000000000 expected_value=2.000000000 status=ok
./auto_vectorized 16 8
variant=auto_vectorized size=16 repetitions=8 elapsed_seconds=0.000000178 checksum=32.000000000 expected_checksum=32.000000000 sample0=2.000000000 samplemid=2.000000000 samplelast=2.000000000 expected_value=2.000000000 status=ok
  File "./analyze_results.py", line 3
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
